--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,4 +4,8 @@
 @tailwind utilities;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Knewave&family=Noto+Sans:wght@200;400&display=swap');
+
+
+
   
