--- a/client/src/component/pages/home/Slider/styles.css
+++ b/client/src/component/pages/home/Slider/styles.css
@@ -24,7 +24,7 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: black;
 
   
     /* Center slide text vertically */
