--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,8 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Knewave&family=Noto+Sans:wght@200;400&display=swap');
- 
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Madimi+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Madimi+One&family=Shrikhand&display=swap');
 
 
   
